--- a/logarytmy.html
+++ b/logarytmy.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mat-Tablice</title>
+    <title>Logarytmy</title>
     <link rel="stylesheet" href="globals.css">
 </head>
 <body>
-    <h1>Mat-Tablice</h1>
-    <p>Wybierz dział:</p>
-    <ul>
-        <li><a href="logarytmy.html">Logarytmy</a></li>
-    </ul>
+    <h1>Logarytmy</h1>
+    <p>logₐb = c ⇔ aᶜ = b</p>
+    <a href="index.html">Wróć</a>
 </body>
 </html>
