--- a/logarytmy.html
+++ b/logarytmy.html
@@ -2,14 +2,41 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logarytmy</title>
-    <link rel="stylesheet" href="globals.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Logarytmy</title>
+  <link rel="stylesheet" href="globals.css">
 </head>
 <body>
-    <h1>Logarytmy</h1>
-    <p>logₐb = c ⇔ aᶜ = b</p>
-    <a href="index.html">Wróć</a>
+  <h1>Logarytmy</h1>
+
+  <h2>📘 Definicja</h2>
+  <p><strong>log<sub>a</sub>(b) = c</strong> &harr; <strong>a<sup>c</sup> = b</strong></p>
+  <p>Gdzie: <em>a &gt; 0, a ≠ 1, b &gt; 0</em></p>
+
+  <h2>🧠 Własności logarytmów</h2>
+  <ul>
+    <li><strong>log<sub>a</sub>(MN) = log<sub>a</sub>(M) + log<sub>a</sub>(N)</strong></li>
+    <li><strong>log<sub>a</sub>(M/N) = log<sub>a</sub>(M) - log<sub>a</sub>(N)</strong></li>
+    <li><strong>log<sub>a</sub>(M<sup>k</sup>) = k · log<sub>a</sub>(M)</strong></li>
+    <li><strong>log<sub>a</sub>(a) = 1</strong>, &nbsp; <strong>log<sub>a</sub>(1) = 0</strong></li>
+    <li><strong>Zmiana podstawy:</strong> log<sub>a</sub>(b) = log<sub>c</sub>(b) / log<sub>c</sub>(a)</li>
+  </ul>
+
+  <h2>🛠️ Zastosowanie</h2>
+  <p>Logarytmy pojawiają się na maturze przy rozwiązywaniu równań, upraszczaniu wyrażeń oraz w zadaniach z wykładniczością.</p>
+
+  <h2>📌 Przykładowe zadanie</h2>
+  <p>Oblicz: <strong>log<sub>2</sub>(8)</strong></p>
+  <p>Rozwiązanie: <strong>2<sup>3</sup> = 8</strong>, więc <strong>log<sub>2</sub>(8) = 3</strong></p>
+
+  <h2>📝 Zadania z matury</h2>
+  <ul>
+    <li>Matura 2021: Oblicz <strong>log<sub>3</sub>(1/9)</strong> → Odp: -2</li>
+    <li>Matura 2018: Dla jakiego x: <strong>log<sub>5</sub>(x) = 2</strong> → x = 25</li>
+    <li>Matura 2016: Oblicz <strong>log<sub>4</sub>(64)</strong> → Odp: 3</li>
+  </ul>
+
+  <br><a href="index.html">⬅ Wróć do spisu</a>
 </body>
 </html>
