--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mat-Tablice</title>
-    <link rel="stylesheet" href="globals.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mat-Tablice</title>
+  <link rel="stylesheet" href="globals.css">
 </head>
 <body>
-    <h1>Mat-Tablice</h1>
-    <p>Wybierz dział:</p>
-    <ul>
-        <li><a href="logarytmy.html">Logarytmy</a></li>
-    </ul>
+  <h1>📚 Mat-Tablice</h1>
+  <p>Wybierz dział matematyczny:</p>
+  <ul>
+    <li><a href="logarytmy.html">Logarytmy</a></li>
+  </ul>
 </body>
 </html>
