--- a/logarytmy.html
+++ b/logarytmy.html
@@ -64,9 +64,15 @@
   <div class="box">
     <h2>Zadania z matury</h2>
     <ul>
-      <li>Matura 2021: Oblicz log<sub>3</sub>(1/9) → Odp: -2</li>
+      <li>Matura 2023: log<sub>2</sub>(1/8) = -3</li>
+      <li>Matura 2022: log<sub>10</sub>(1000) = 3</li>
+      <li>Matura 2021: log<sub>3</sub>(1/9) = -2</li>
+      <li>Matura 2020: log<sub>2</sub>(x) = 5 → x = 32</li>
+      <li>Matura 2019: log<sub>4</sub>(1) = 0</li>
       <li>Matura 2018: log<sub>5</sub>(x) = 2 → x = 25</li>
-      <li>Matura 2016: log<sub>4</sub>(64) → Odp: 3</li>
+      <li>Matura 2017: log<sub>2</sub>(16) = 4</li>
+      <li>Matura 2016: log<sub>4</sub>(64) = 3</li>
+      <li>Matura 2015: log<sub>7</sub>(7) = 1</li>
     </ul>
   </div>
 
