--- a/logarytmy.html
+++ b/logarytmy.html
@@ -62,7 +62,60 @@
   </div>
 
   <div class="box">
-    <h2>Zadania z matury</h2>
+    <h2>Zadania z matury – z wyjaśnieniem</h2>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2023:</strong> log<sub>2</sub>(1/8)</p>
+      <p><strong>Co robimy:</strong> Patrzymy: 8 to 2<sup>3</sup>, więc 1/8 to 2<sup>-3</sup>. Bo odwrotność zmienia potęgę na minus.</p>
+      <p><strong>Więc:</strong> log<sub>2</sub>(2<sup>-3</sup>) = -3 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2022:</strong> log<sub>10</sub>(1000)</p>
+      <p><strong>Co robimy:</strong> 1000 to 10<sup>3</sup>. Czyli szukamy: do jakiej potęgi trzeba podnieść 10, żeby dostać 1000?</p>
+      <p><strong>Odp:</strong> 3 → log<sub>10</sub>(1000) = 3 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2021:</strong> log<sub>3</sub>(1/9)</p>
+      <p><strong>Co robimy:</strong> 9 to 3<sup>2</sup>, więc 1/9 to 3<sup>-2</sup>. Zmieniamy na potęgę.</p>
+      <p><strong>Odp:</strong> log<sub>3</sub>(3<sup>-2</sup>) = -2 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2020:</strong> log<sub>2</sub>(x) = 5</p>
+      <p><strong>Co robimy:</strong> Zamieniamy logarytm na potęgę: 2<sup>5</sup> = x</p>
+      <p><strong>Obliczamy:</strong> 2<sup>5</sup> = 32 → x = 32 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2019:</strong> log<sub>4</sub>(1)</p>
+      <p><strong>Co robimy:</strong> logarytm z 1 to zawsze 0, bo każda liczba do potęgi 0 daje 1.</p>
+      <p><strong>Odp:</strong> log<sub>4</sub>(1) = 0 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2018:</strong> log<sub>5</sub>(x) = 2</p>
+      <p><strong>Co robimy:</strong> Zamieniamy logarytm na potęgę: 5<sup>2</sup> = x</p>
+      <p><strong>Odp:</strong> x = 25 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2017:</strong> log<sub>2</sub>(16)</p>
+      <p><strong>Co robimy:</strong> 16 to 2<sup>4</sup> → więc log<sub>2</sub>(16) = 4 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2016:</strong> log<sub>4</sub>(64)</p>
+      <p><strong>Co robimy:</strong> 64 to 4<sup>3</sup> → log<sub>4</sub>(64) = 3 ✅</p>
+    </div>
+
+    <div class="important">
+      <p><strong>🧠 Matura 2015:</strong> log<sub>7</sub>(7)</p>
+      <p><strong>Co robimy:</strong> log z tej samej liczby co podstawa to zawsze 1 → bo 7<sup>1</sup> = 7</p>
+      <p><strong>Odp:</strong> 1 ✅</p>
+    </div>
+
     <ul>
       <li>Matura 2023: log<sub>2</sub>(1/8) = -3</li>
       <li>Matura 2022: log<sub>10</sub>(1000) = 3</li>
